tests/snapshots/run_wpt_conformance__litert_elu_float16_4D_tensor_positive_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
elu.https.any.js elu float16 4D tensor positive options.alpha, litert
 elu :: elu float16 4D tensor positive options.alpha: index 0: actual=4.5703125 expected=4.7226563 ulp=39 tolerance=18
  inputs: eluInput: [4.72265625, 0.376953125, 1.4189453125, -3.8671875, 1.359375, -3.86328125, 7.83984375, -6.69140625, 0.54541015625, 5.77734375, 7.26171875, -7.421875, 5.6640625, -6.71484375, -3.333984375, -1.2099609375, 7.25390625, 8.90625, -4.01953125, 7.11328125, -0.11212158203125, -3.689453125, 6.13671875, -9.8984375]
  expected eluOutput: [4.7226563, 0.37695313, 1.4189453, -0.35327148, 1.359375, -0.35327148, 7.8398438, -0.36035156, 0.54541016, 5.7773438 ...] (len=24)
  actual eluOutput: [4.5703125, 0.22424316, 1.2666016, -0.0031967163, 1.2070313, -0.003206253, 7.6875, -0.00019037724, 0.39257813, 5.625 ...] (len=24)
  expected eluOutput full nd:
[4.7226563, 0.37695313, 1.4189453, -0.35327148, 1.359375, -0.35327148, 7.8398438, -0.36035156, 0.54541016, 5.7773438, ...] (len=24, shape=[1, 2, 3, 4])
  actual eluOutput full nd:
[4.5703125, 0.22424316, 1.2666016, -0.0031967163, 1.2070313, -0.003206253, 7.6875, -0.00019037724, 0.39257813, 5.625, ...] (len=24, shape=[1, 2, 3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    eluInput: f16[1, 2, 3, 4];
  }

  nodes {
    [eluOutput] = elu(eluInput, alpha=0.3607245505146506, label="");
  }

  outputs { eluOutput; }
}
